frequent fridge problems block: fix image distortion

--- a/src/ui-kit/frequent-fridge-problems/frequent-fridge-problems.module.scss
+++ b/src/ui-kit/frequent-fridge-problems/frequent-fridge-problems.module.scss
@@ -19,6 +19,16 @@
     display: flex;
     flex-direction: column;
 
+    .image-container {
+      width: 470px;
+      height: 470px;
+      position: relative;
+
+      .image {
+        border-radius: 12px;
+      }
+    }
+
     .call-me-back-text {
       margin: 56px 0 32px 0;
     }
